[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/passaro/morte/2.png" type="Texture" id=1]
[ext_resource path="res://assets/passaro/lado/sprite_2.png" type="Texture" id=2]
[ext_resource path="res://assets/passaro/lado/sprite_1.png" type="Texture" id=3]
[ext_resource path="res://assets/passaro/lado/sprite_0.png" type="Texture" id=4]
[ext_resource path="res://assets/passaro/cima/sprite_1.png" type="Texture" id=5]
[ext_resource path="res://assets/passaro/cima/sprite_2.png" type="Texture" id=6]
[ext_resource path="res://assets/passaro/susto/susto.png" type="Texture" id=7]
[ext_resource path="res://assets/passaro/morte/1.png" type="Texture" id=8]
[ext_resource path="res://assets/passaro/morte/3.png" type="Texture" id=9]
[ext_resource path="res://assets/passaro/morte/0.png" type="Texture" id=10]
[ext_resource path="res://assets/passaro/cima/sprite_0.png" type="Texture" id=11]
[ext_resource path="res://scripts/duck/duck.gd" type="Script" id=12]
[ext_resource path="res://assets/sons/pato.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 9 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "scare",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "side",
"speed": 7.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "up",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 52.469

[node name="Duck" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 12 )
side = 1
speed = 100
fall = 1

[node name="texture" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "up"
frame = 2
playing = true

[node name="collison" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="movement_timer" type="Timer" parent="."]
autostart = true

[node name="animation_timer" type="Timer" parent="."]
autostart = true

[node name="dead_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="duck_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="quack_timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="movement_timer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="animation_timer" to="." method="_on_animation_timer_timeout"]
[connection signal="timeout" from="dead_timer" to="." method="_on_dead_timer_timeout"]
[connection signal="timeout" from="quack_timer" to="." method="_on_quack_timer_timeout"]
